--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
