--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT = 5001
-MONGO_URI=mongodb+srv://varshagym123:QTfRKrA9CWTc9UbK@cluster0.3xxim.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://varshagym123:xvFqxH9GeO16A6WL@cluster0.32jjfry.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=aehbrbgfbvhjfjbjqwertyuivhbhbj
-FRONTEND_URL = http://localhost:5173
+CLIENT_URL = http://localhost:5173
 EMAIL_USER = varshagym123@gmail.com
 EMAIL_PASS = 8903467499a@A
